--- a/src/main/resources/templates/crimes.html
+++ b/src/main/resources/templates/crimes.html
@@ -14,7 +14,7 @@
     <title>Crimemap</title>
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32">
@@ -33,8 +33,15 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Crimes</h1>
-
+            <div class="row mt-5">
+                <div class="col-md-10">
+                    <h1>Crimes</h1>
+                </div>
+                <div class="col-md-2 float-right text-end">
+                    <a th:href="@{/edit-crime/}" class="btn btn-primary button-lg" role="button"><i class="bi bi-plus-lg"></i> Add crime</a>
+                </div>
+            </div>
+                
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
@@ -44,7 +51,7 @@
                         <th scope="col">Coords</th>
                         <th scope="col">Offense</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Edit</th>
+                        <th scope="col">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -56,10 +63,12 @@
                         <td><a th:href="|https://www.openstreetmap.org/?mlat=${crime.lat}&mlon=${crime.lon}#map=17/${crime.lat}/${crime.lon}|" th:text="|${crime.lat},${crime.lon}|"></a></td>
                         <td th:text="${crime.offense.name}"></td>
                         <td th:text="${crime.description}"></td>
-                        <td>
+                        <td><!--
                             <form method="GET" th:action="@{/edit-crime/{id}(id=${crime.id})}">
-                                <button type="submit" class="btn btn-outline-secondary"><i class="bi bi-pencil"></i></button>
-                            </form>
+                                <button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil"></i></button>
+                            </form>-->
+                            <a th:href="@{/edit-crime/{id}(id=${crime.id})}" class="btn btn-outline-primary btn-sm" role="button"><i class="bi bi-pencil"></i> Edit</a>
+                            <a th:href="@{/delete-crime/{id}(id=${crime.id})}" class="btn btn-outline-danger btn-sm" role="button"><i class="bi bi-trash"></i> Delete</a>
                         </td>
                     </tr>
                 </tbody>
@@ -70,15 +79,15 @@
 
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">&copy; HFT Stuttgart, Danny Belz, Jonathan Vijakumar</span>
+            <span class="text-muted">&copy; Built with <i class="bi bi-suit-heart-fill"></i> by Danny Belz &amp; Jonathan Vijakumar</span>
         </div>
     </footer>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>-->
 </body>
 
 </html>
