--- a/src/main/resources/templates/edit-crime.html
+++ b/src/main/resources/templates/edit-crime.html
@@ -14,7 +14,7 @@
     <title>Crimemap</title>
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32">
@@ -40,40 +40,40 @@
                         <ul th:if="${#fields.hasErrors('*')}">
                             <li th:each="error : ${#fields.errors('*')}" th:text="${error}">error</li>
                         </ul>
-                        <div class="form-row">
+                        <div class="row g-3">
                             <input type="hidden" th:field="*{id}">
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-6">
                                 <label>Date</label>
                                 <input type="date" class="form-control" th:field="*{dateTime}">
                             </div>
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-6">
                                 <label>District</label>
-                                <select class="form-control" th:field="*{district.id}">
+                                <select class="form-select" th:field="*{district.id}">
                                     <option value="0">Choose district...</option>
                                     <option th:each="district : ${districts}" th:value="${district.id}" th:text="${district.name}"></option>
                                 </select>
                             </div>
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-6">
                                 <label>Latitude</label>
                                 <input type="number" step="any" class="form-control" th:field="*{lat}">
                             </div>
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-6">
                                 <label>Longitude</label>
                                 <input type="number" step="any" class="form-control" th:field="*{lon}">
                             </div>
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-6">
                                 <label>Offense</label>
-                                <select class="form-control" th:field="*{offense.id}">
+                                <select class="form-select" th:field="*{offense.id}">
                                     <option value="0">Choose offense...</option>
                                     <option th:each="offense : ${offenses}" th:value="${offense.id}" th:text="${offense.name}"></option>
                                 </select>
                             </div>
+                            <div class="col-12">
+                                <label>Description</label>
+                                <input type="text" class="form-control" th:field="*{description}"></input>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label>Description</label>
-                            <textarea class="form-control" th:field="*{description}" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block mt-3">Save crime</button>
+                        <button type="submit" class="btn btn-primary btn-block mt-3"><i class="bi bi-save"></i> Save crime</button>
                     </form>
                 </div>
             </div>
@@ -83,15 +83,15 @@
 
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">&copy; HFT Stuttgart, Danny Belz, Jonathan Vijakumar</span>
+            <span class="text-muted">&copy; Built with <i class="bi bi-suit-heart-fill"></i> by Danny Belz &amp; Jonathan Vijakumar</span>
         </div>
     </footer>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>-->
 </body>
 
 </html>
