--- a/src/main/resources/templates/edit-crime.html
+++ b/src/main/resources/templates/edit-crime.html
@@ -15,20 +15,13 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom text-light bg-dark">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-light text-decoration-none">
             <svg class="bi me-2" width="40" height="32">
                 <use xlink:href="#bootstrap" />
             </svg>
             <span class="fs-4">Crimemap</span>
         </a>
-
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Crimes</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Map</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Admins</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
-        </ul>
     </header>
 
     <main class="flex-shrink-0">
@@ -44,7 +37,7 @@
                             <input type="hidden" th:field="*{id}">
                             <div class="col-md-6">
                                 <label>Date</label>
-                                <input type="date" class="form-control" th:field="*{dateTime}">
+                                <input type="date" class="form-control" th:field="*{dateOfCrime}">
                             </div>
                             <div class="col-md-6">
                                 <label>District</label>
@@ -73,7 +66,8 @@
                                 <input type="text" class="form-control" th:field="*{description}"></input>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block mt-3"><i class="bi bi-save"></i> Save crime</button>
+                        <button type="submit" name="submit" class="btn btn-primary btn-block mt-3"><i class="bi bi-save"></i> Save crime</button>
+                        <button type="submit" name="cancel" class="btn btn-secondary btn-block mt-3"><i class="bi bi-x-square"></i> Cancel</button>
                     </form>
                 </div>
             </div>
@@ -83,7 +77,7 @@
 
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">&copy; Built with <i class="bi bi-suit-heart-fill"></i> by Danny Belz &amp; Jonathan Vijakumar</span>
+            <span class="text-muted">&copy; Built with <i class="bi bi-suit-heart-fill"></i> by Danny Belz &amp; Jonathan Vijayakumar</span>
         </div>
     </footer>
 
