--- a/src/main/resources/templates/crimes.html
+++ b/src/main/resources/templates/crimes.html
@@ -37,13 +37,16 @@
 
             <form th:action="@{/}" th:object="${filter}" method="post">
                 <div class="row mt-5">
-                    <div class="col-md-3">
+                    <div class="col-md-1">
+                        <b>Filter:</b>
+                    </div>
+                    <div class="col-md-2">
                         <select class="form-select" th:field="*{district}">
                             <option value="0">Choose district...</option>
                             <option th:each="district : ${districts}" th:value="${district.id}" th:text="${district.name}" name="district"></option>
                         </select>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <select class="form-select" th:field="*{offense}">
                             <option value="0">Choose offense...</option>
                             <option th:each="offense : ${offenses}" th:value="${offense.id}" th:text="${offense.name}" name="offense"></option>
@@ -56,8 +59,9 @@
                         <input type="date" class="form-control" th:field="*{dateEnd}">
                     </div>
 
-                    <div class="col-md-2">
+                    <div class="col-md-3 text-end">
                         <button type="submit" name="submit" class="btn btn-secondary btn-block"><i class="bi bi-filter"></i> Apply filter</button>
+                        <button type="submit" name="reset" class="btn btn-secondary btn-block"><i class="bi bi-x-square"></i> Reset filter</button>
                     </div>
                 </div>
             </form>
@@ -96,15 +100,10 @@
 
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">&copy; Built with <i class="bi bi-suit-heart-fill"></i> by Danny Belz &amp; Jonathan Vijayakumar</span>
+            <span class="text-muted">&copy; Built with <i class="bi bi-suit-heart-fill"></i> by Danny Belz &amp; Johnny Vijayakumar</span>
         </div>
     </footer>
 
-
-
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>-->
 </body>
 
 </html>
