--- a/src/main/resources/templates/crimes.html
+++ b/src/main/resources/templates/crimes.html
@@ -22,6 +22,9 @@
             </svg>
             <span class="fs-4">Crimemap</span>
         </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a target="_blank" href="https://www.presseportal.de/blaulicht/nr/110977" class="nav-link text-white"><i class="bi bi-newspaper"></i></a></li>
+        </ul>
     </header>
 
     <main class="flex-shrink-0">
@@ -75,7 +78,7 @@
                         <th scope="col">District</th>
                         <th scope="col">Coords</th>
                         <th scope="col">Offense</th>
-                        <th scope="col">Description</th>
+                        <th scope="col" class="col-md-3">Description</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
